--- a/Razor/Views/Home/Index.cshtml
+++ b/Razor/Views/Home/Index.cshtml
@@ -16,4 +16,22 @@
     }
 
     <h2>@nome @cognome</h2>
+
+
+    <p>
+        2. Creare una funzione che stampa la somma dei numeri che vanno da 1 a n (con n passato come parametro - n incluso)
+        Stampare dentro uno span il risultato.
+    </p>
+
+    @{
+        int numeri = new Random().Next(1, 100);
+        int sum = 0;
+        for (int i = 0; i <= numeri; i++)
+        {
+            sum += i;
+        }
+    }
+
+    <span>@sum</span>
+
 </div>
