--- a/Razor/Views/Home/Index.cshtml
+++ b/Razor/Views/Home/Index.cshtml
@@ -34,4 +34,18 @@
 
     <span>@sum</span>
 
+
+    <p>
+        3.Contare quante volte la lettera a è presente nalla frase "nel mezzo del cammin di nostra vita" e stampare questo valore in pagina
+    </p>
+
+    @{
+        string fraseDivinaCommedia = "Nel mezzo del cammin di nostra vita";
+        string letteraDivinaCommedia = "a";
+        int numberoLetteraA = fraseDivinaCommedia.Split(letteraDivinaCommedia).Length - 1;
+    }
+
+    <p>Nella frase @fraseDivinaCommedia la lettera "a" viene ripetuta @numberoLetteraA volte</p>
+    
 </div>
+ 
