quarto e quinto esercizio

--- a/Razor/Views/Home/Index.cshtml
+++ b/Razor/Views/Home/Index.cshtml
@@ -36,7 +36,8 @@
 
 
     <p>
-        3.Contare quante volte la lettera a è presente nalla frase "nel mezzo del cammin di nostra vita" e stampare questo valore in pagina
+        3.Contare quante volte la lettera a è presente nalla frase "nel mezzo del cammin di nostra vita" 
+        e stampare questo valore in pagina.
     </p>
 
     @{
@@ -47,5 +48,47 @@
 
     <p>Nella frase @fraseDivinaCommedia la lettera "a" viene ripetuta @numberoLetteraA volte</p>
     
+
+    <p>
+        4. Creare una List<int> di 20 numeri interi (generati random da 1 a 90, 1 e 90 inclusi) 
+            e mostrare in pagina solo i numeri compresi tra 20 e 70.
+     </p>
+
+     @{
+         List<int> listaNumeri = new List<int>();
+        for (int i = 0; i < 20; i++)
+        {
+            int numeriRandom = new Random().Next(1, 90);
+            listaNumeri.Add(numeriRandom);
+        }
+        foreach (int number in listaNumeri)
+        {
+            if (number > 20 && number < 70)
+            {
+                <span>@number</span>
+            }
+        }
+    }
+
+
+     <p>
+        5. Stampare in pagina la data e l'ora attuale (usando la classe DateTime) con il formato anno-mese-giorno ore:minuti:secondi
+     </p>
+
+     @{
+         DateTime dataOggi = DateTime.Now;
+     }
+     <p>@dataOggi</p>
+
+
+     <p>
+        6. Partendo dalla data di oggi (usando la classe DateTime) stampare in pagina
+        a. la data di 7 giorni fa
+        b. che giorno della settimana è oggi (il risultato dovrà essere il nome del giorno (Lunedì, Martedì, ...)
+        c. che giorno della settimana sarà nello stesso giorno e mese di oggi ma tra un anno 
+        (il risultato dovrà essere il nome del giorno (Lunedì, Martedì, ...)
+     </p>
+
+     
 </div>
  
