Ho messo la sezione privacy, aggiunto il footer e migliorato il layout

--- a/LaMiaPizzeria/Views/Home/Index.cshtml
+++ b/LaMiaPizzeria/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿     <main>
+﻿     <main class="sfondo-pizza">
         <div class="container mt-5 text-light bg-danger bg-opacity-25 rounded-3">
             <div class="row">
                 <div class="col-12">
