--- a/LaMiaPizzeria/Views/Home/Privacy.cshtml
+++ b/LaMiaPizzeria/Views/Home/Privacy.cshtml
@@ -1,6 +1,13 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    Layout = "_MioLayout";
 }
-<h1>@ViewData["Title"]</h1>
+<h1 class="d-flex text-light justify-content-center">Privacy</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p class="d-flex text-light justify-content-center">
+   <em>Non pubblichiamo annunci pubblicitari, non usiamo dati a fini di invio di pubblicità,
+    però facciamo uso di servizi di terze parti al fine di migliorare l'utilizzo del sito, 
+    terze parti che potrebbero raccogliere dati degli utenti e poi usarli per inviare annunci pubblicitari personalizzati su altri siti. 
+    Tuttavia poniamo in essere ogni sforzo possibile per tutelare la privacy degli utenti 
+    e minimizzare la raccolta dei dati personali.</em></p>
+
+<p class="d-flex text-light justify-content-center">L'UNICA COSA CHE CI INTERESSA E' FARTI AMARE LA NOSTRA PIZZA!!!</p>
