--- a/LaMiaPizzeria/Views/Shared/_Footer.cshtml
+++ b/LaMiaPizzeria/Views/Shared/_Footer.cshtml
@@ -1,3 +1,11 @@
-﻿<a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-    <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-</a>
+﻿<div class="d-flex flex-wrap justify-content-around align-items-end py-5 my-5 bg-danger">
+    <p class="d-flex align-items-center text-white">© 2023 Emanuele, Inc</p>
+
+    
+
+    <ul class="d-flex nav align-items-center text-white">
+        <li class="nav-item"><a href="@Url.Action("Index", "Home")" class="nav-link px-2 text-white">Menù</a></li>
+        <li class="nav-item"><a href="@Url.Action("Contacts", "Home")" class="nav-link px-2 text-white">Contatti</a></li>
+        <li class="nav-item"><a href="@Url.Action("Privacy", "Home")" class="nav-link px-2 text-white">Privacy</a></li>
+    </ul>
+</div>
