--- a/LaMiaPizzeria/Views/Shared/_Header.cshtml
+++ b/LaMiaPizzeria/Views/Shared/_Header.cshtml
@@ -1,23 +1,22 @@
-﻿<nav class="navbar navbar-expand-lg bg-body-tertiary">
+﻿<nav class="navbar navbar-expand-lg bg-danger">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        
+        <a class="navbar-brand text-white" href="@Url.Action("Index", "Home")">La Mia Pizzeria</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active text-white" aria-current="page" href="@Url.Action("Index", "Home")">Menù</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
+                    <a class="nav-link text-white" href="@Url.Action("Contacts", "Home")">Contatti</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
+                    <a class="nav-link text-white" href="@Url.Action("Privacy", "Home")">Privacy</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
-                </li>
+                
             </ul>
         </div>
     </div>
